# SARL

./: .devcontainer.json  .gitignore  Noneeval.csv  README.md  devenv.nix  devenv.yaml  diagram-classes.drawio  diagram-concepts.drawio  notes.md  progress.csv  pyproject.toml  pyrightconfig.json
.devcontainer/: devcontainer.json
.zed/: debug.json  debugpy.json
outputs-saved/2024-12-18 copy/06-33-07/: progress-2024-12-18-6-33-07.csv  progress-2024-12-18-6-33-07.numbers
outputs-saved/2024-12-18 copy/06-33-07/.hydra/: config.yaml  hydra.yaml  overrides.yaml
outputs-saved/ppo-ppo-goal 2025-04-25_08-16-19/: eval.csv
outputs-saved/ppo-ppo-goal 2025-04-25_08-16-19/.hydra/: config.yaml  hydra.yaml  overrides.yaml
outputs-saved/ppo-ppo-goal 2025-04-25_08-16-19/seed_1/ppo-ppo-goal-v0-continuous-60cycles-540000steps/: progress.csv
outputs-saved/ppo-ppo-goal 2025-04-25_08-16-19/seed_1/ppo-ppo-goal-v0-discrete-60cycles-540000steps/: progress.csv
outputs-saved/ppo-ppo-goal cycles 2025-04-25_08-28-46/: eval.csv  eval_graphs.numbers
outputs-saved/ppo-ppo-goal cycles 2025-04-25_08-28-46/.hydra/: config.yaml  hydra.yaml  overrides.yaml
outputs-saved/ppo-ppo-goal cycles 2025-04-25_08-28-46/seed_1/ppo-ppo-goal-v0-continuous-600cycles-540000steps/: progress.csv
outputs-saved/ppo-ppo-platform 2025-04-25_08-18-37/: eval.csv
outputs-saved/ppo-ppo-platform 2025-04-25_08-18-37/.hydra/: config.yaml  hydra.yaml  overrides.yaml
outputs-saved/ppo-ppo-platform cycles 2025-04-25_08-28-35/: eval.csv
outputs-saved/ppo-ppo-platform cycles 2025-04-25_08-28-35/.hydra/: config.yaml  hydra.yaml  overrides.yaml
sarl/: sarl.py  train.py
sarl/agents/callbacks/: data_callback.py
sarl/common/bester/: README.md
sarl/common/bester/agents/: paddpg.py  pdqn.py  (+6 more)
sarl/config/: sarl.yaml
sarl/config/experiment/: a2c-ddpg-platform.yaml  a2c-ppo-platform.yaml  dqn-sac-platform.yaml  pdqn-goal.yaml  pdqn-platform.yaml  ppo-ppo-goal.yaml  ppo-ppo-platform-1h-15seeds.yaml  ppo-ppo-platform-old.yaml  ppo-ppo-platform.yaml
sarl/environments/wrappers/: converter.py  notes_re_env_spaces.txt
sarl/scripts/: aggregate_outputs-vanilla-pdqn.py  aggregate_outputs.py  aggregate_outputs_old.py  aggregation-2025-01-old.py  aggregation-2025-01.py  scp-results-here.sh
sarl/scripts/aggregate_outputs/: 2025-08-31_MATRIX_goal_with_baselines.tex  2025-08-31_MATRIX_platform_with_baselines.tex  2025-08-31_MATRIX_platform_with_baselines_2.tex
sarl/scripts/ax/: _analyze.py  _test_submitit.py  _ttest.py  _ttest_grid.py  _visualize_grid.py  analyze.py  ax_driver.py  ax_driver_toy.py  bayes_opt.py  config.py  grid_search.py  main.py  optimise.py  produce_grid.py  test_submitit.py  training.py  visualisation.py  visualize_grid.py
sarl/scripts/hec-related/: assignments.sh  baseline-assignments.sh  baselines.com  converter.com  run-baselines-gpu.com  run-cpu.com  run-gpu.com
sarl/snippets/: converter_use.py  pdqn_use copy.py  pdqn_use.py  qpamdp_use.py  temp_pdqn.py
sarl/wrappers/: converter.py
tests/: temp_run_conv_on_hec.py  test_converter.py  test_environments.py  test_pdqn.py  test_qpamdp.py  test_train.py
tests/test_output/run_1/: events.out.tfevents.1714470087.mallard.39028.0
tests/test_output/run_2/: events.out.tfevents.1714470195.mallard.39253.0
tests/test_output/unnamed/: 2025-04-24_05-32-22eval.csv  2025-04-24_05-33-39eval.csv  2025-04-24_05-44-23eval.csv  2025-04-24_05-49-24eval.csv
(+360 files in other folders)
