[tool.poetry]
name = "sarl"
version = "0.1.1-alpha"
description = "Algorithms and environments for structured action-space reinforcement learning."
authors = ["Theodore Tollet <t.tollet@lancaster.ac.uk>"]

[tool.poetry.dependencies]
python = "^3.9, <3.12"
numpy = "^1.24.4"
pygame = "^2.4.0"
numba = "^0.57.0"
gymnasium = "^0.28.1"
torch = "^1.13.1"
click = "^8.1.3"
tqdm = "^4.66.1"
hydra-core = "^1.3.2"
tensorboard = "^2.16.2"

[tool.poetry.group.test.dependencies]
pytest = "^7.3.1"

[tool.poetry.group.dev.dependencies]
pycodestyle = "^2.11.0"
pylint = "^2.17.5"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

# Addition here enables running without using python3 preface
# entrypoints, etc []
# sarl.train:main

# [project.scripts]
# train = "sarl.train:main"
