[project]
name = "sarl"
version = "0.1.1-alpha"
description = "Algorithms and environments for structured action-space reinforcement learning."
authors = [
    {name = "Theodore Tollet", email = "t.tollet@lancaster.ac.uk"}
]
requires-python = ">=3.10,<3.12"
dependencies = [
    "numpy>=1.24.4,<2",
    "pygame>=2.4.0,<3",
    "numba>=0.57.0,<1",
    "gymnasium>=0.28.1,<1",
    "torch>=2.0.1,<3",
    "click>=8.1.3,<9",
    "tqdm>=4.66.1,<5",
    "hydra-core>=1.3.2,<2",
    "stable-baselines3>=2.3.0,<3",
    "rich>=13.7.1,<14",
    "protobuf==4.25.3",
    "tensorboard>=2.16.2,<3",
    "ipykernel>=6.29.5,<7",
    "polars>=1.21.0,<2",
    "altair>=5.5.0,<6",
    "vl-convert-python>=1.7.0,<2",
    "vegafusion[embed]>=2.0.1,<3",
    "vegafusion-python-embed>=1.6.9,<2",
    "pyarrow>=21.0.0,<22",
    "seaborn>=0.13.2,<1",
    "ax-platform>=1.1.2,<2",
    "submitit>=1.5.3,<2",
    "wandb>=0.25.1",
]

[project.optional-dependencies]
test = [
    "pytest>=7.3.1,<8",
]
dev = [
    "pycodestyle>=2.11.0,<3",
    "pylint>=2.17.5,<3",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

# Addition here enables running without using python3 preface
# entrypoints, etc []
# sarl.train:main

# [project.scripts]
# train = "sarl.train:main"
